--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico">
-		<title>站长导航</title>
-		<meta name="description" content="站长工具导航" />
+		<title>站长老五导航</title>
+		<meta name="description" content="站长老五导航" />
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -351,6 +351,18 @@
 								<li class="list-group-item">
 									<a target='_blank' href="https://code.ziqiangxuetang.com/">自强学堂</a>
 								</li>
+								<li class="list-group-item">
+									<a target='_blank' href="http://www.mjtt5.org/">美剧天堂</a>
+								</li>
+								<li class="list-group-item">
+									<a target='_blank' href="https://longshenghe.com/">西瓜影视</a>
+								</li>
+								<li class="list-group-item">
+									<a target='_blank' href="http://www.ixigua.com/">西瓜视频</a>
+								</li>
+								<li class="list-group-item">
+									<a target='_blank' href="http://www.yilong9.com">艺龙影院</a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -479,3 +491,4 @@
 		return flag;
 	}
 </script>
+
