--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 		<title>拉不拉软件</title>
 		<meta name="description" content="本网站分享免费工具网站或者免费软件" />
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<style>
+			img {
+				max-width: 100%;
+			}
+
+			h3{
+				text-align: center;
+				color:green;
+			}
+			h2{
+				text-align: center;
+				color:#FF00FF;
+			}
+			p{
+				font-size:18px;
+				margin:10px;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="container">
@@ -30,125 +48,90 @@
 				</nav>
 
 				<div class="col-md-12 column">
-					<div class="col-sm-12" style='margin:0px;padding:0px;'>
-						
-						<div class="alert alert-dismissable" style="margin-bottom: 0px;">
-							<div class="btn-toolbar" role="toolbar">
-								<div class="btn-group">
-									<button type="button" class="btn btn-default" style='background-color:yellow;'><a
-											target='_blank' rel='nofollow'
-											href='https://www.4414.cn'>4414站长论坛</a></button>
-									<button type="button" class="btn btn-default" style=''><a target='_blank'
-											rel='nofollow' href='https://beian.miit.gov.cn/'>备案查询</a></button>
-									<button type="button" class="btn btn-default" style=''><a target='_blank'
-											rel='nofollow' href='https://mi.aliyun.com/'>阿里二手域名</a></button>
-									<button type="button" class="btn btn-default" style=''><a target='_blank'
-											rel='nofollow' href='https://inspiration.baidu.com/app'>百度AI</a></button>
-									<button type="button" class="btn btn-default" style=''><a target='_blank'
-											rel='nofollow' href='http://www.jucha.com/lishi/'>建站历史查询</a></button>
-									<button type="button" class="btn btn-default" style=''><a target='_blank'
-											rel='nofollow' href='https://wanwang.aliyun.com/domain/'>域名注册查询</a></button>
-									<button type="button" class="btn btn-default" style='background-color:yellow;'><a
-											target='_blank' rel='nofollow'
-											href='http://xinxi.byethost15.com'>在线挖掘关键词</a></button>
 
-								</div>
-							</div>
-						</div>
-					</div>
 					<div class="col-sm-12" style='padding:0px;margin:0px;'>
-						<div class="col-sm-3" style='padding:3px;margin:0px;'>
-							<ul class="list-group">
-								<li class="list-group-item"
-									style="text-align: center;font-size: 20px;color: green;background-color: #F5F5F5;">
-									图片工具</li>
-								<li class="list-group-item">
-									<a target='_blank' href="https://818ps.com/">图片制作-图怪兽</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' href="https://www.uupoop.com/">在线PS-一键抠图</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' href="https://removal.ai/">一键抠图-removal.ai</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' href="https://www.remove.bg/zh">一键抠图-remove.bg</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' href="https://www.bitbug.net/">ico图标生成</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' href="https://pc.meitu.com/">美图秀秀</a>
-								</li>
-							</ul>
+
+						<div class="col-sm-8" style="margin:0px;padding:3px;">
+							<img class="img-fluid" src="1.PNG" />
 						</div>
-						<div class="col-sm-3" style='margin:0px;padding:3px;'>
-
-							<ul class="list-group">
-								<li class="list-group-item"
-									style="text-align: center;font-size: 20px;color: green;background-color: #F5F5F5;">
-									语音工具</li>
-
-								<li class="list-group-item">
-									<a target='_blank'
-										href="http://soft.360.cn/static/baoku/info_7_0/softinfo_104799528.html">sitemap生成工具</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank'
-										href="https://baike.baidu.com/item/xenu/3165444?fr=aladdin">死链查询工具</a>
-								</li>
-
-								<li class="list-group-item">
-									<a target='_blank' href="http://www.locoy.com/">火车采集器</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' href="https://www.bazhuayu.com/">八爪鱼采集器</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank'
-										href="https://trends.google.com/trends/explore?geo=US&q=Online piano">google趋势</a>
-								</li>
-							</ul>
-						</div>
-						<div class="col-sm-3" style="margin:0px;padding:3px;background-color: ;">
+						<div class="col-sm-4" style="margin:0px;padding:3px;">
 							<ul id='pingtai' class="list-group">
 								<li class="list-group-item"
 									style="text-align: center;font-size: 20px;color: green;background-color: #F5F5F5;">
-									文案工具</li>
-								<li class="list-group-item">
-									<a target='_blank' rel='nofollow' href="https://wz.a5.cn/">A5网站交易</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' rel='nofollow' href="https://www.kmw.com/">酷米网</a>
-								</li>
+									辅助工具</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow'
-										href="https://www.4414.cn/forum-81-1.html">4414</a>
+										href="https://tts.wangwangit.com/">文字转音频</a>
+								</li>
+								<li class="list-group-item">
+									<a target='_blank' rel='nofollow' href="https://snapany.com/zh/bilibili">素材视频下载</a>
 								</li>
 							</ul>
-						</div>
-						<div class="col-sm-3" style="margin:0px;padding:3px;background-color: ;">
 							<ul id='pingtai' class="list-group">
 								<li class="list-group-item"
 									style="text-align: center;font-size: 20px;color: green;background-color: #F5F5F5;">
-									视频工具</li>
+									购买软件</li>
 								<li class="list-group-item">
-									<a target='_blank' rel='nofollow'
-										href="https://didi.seowhy.com/sell_link.html">搜外友链</a>
+									<font color=red>一次付费，终身使用</font>
 								</li>
 								<li class="list-group-item">
-									<a target='_blank' rel='nofollow' href="https://www.520link.com/zhiyuan">爱链网</a>
+									只需<font color=red>28元</font>
 								</li>
-								<li class="list-group-item"><img class="ico" src='' />
-									<a target='_blank' rel='nofollow'
-										href="https://www.4414.cn/forum-104-1.html">4414</a>
+								<li class="list-group-item">
+									QQ号：<font color=red>2207537958</font>
+								</li>
+								<li class="list-group-item">
+									微信：<font color=red>labularuanjian</font>（拉不拉软件的拼音）
+								</li>
+								<li class="list-group-item">
+									支付方式：<font color=red>支付宝、微信</font>
 								</li>
 							</ul>
 						</div>
 					</div>
-					
 				</div>
-
+				<div class="col-md-12 column">
+					<h2>视频合成</h2>
+					<div class="col-sm-4">
+						<h3>文字转音频</h3>
+						<p><font color=red>方法1：</font>将文本复制到“合成”文件夹中的“文本.txt”中，点击软件的绿色按钮，自动生成音频文件</p>
+						<p><font color=red>方法2：</font>使用<a target="_blank" href="https://tts.wangwangit.com/">文字转音频</a>工具，在线生成音频文件，下载后，改名为“音频.mp3”,复制到软件目录的“合成”文件夹中。</p>
+					</div>
+					<div class="col-sm-4">
+						<h3>图片转视频</h3>
+						<p>将自己准备的图片，放到“合成”文件夹里的“图片”文件夹中，点击软件界面的相应按钮，自动生成无声视频。</p>
+					    <p>每张图片默认播放5秒，可以自己修改</p>
+					</div>
+					<div class="col-sm-4">
+						<h3>视频合成</h3>
+						<p>前面两个步骤，分别生成了"音频.mp3"和"无声视频.mp4"</p>
+						<p>直接点击“视频合成”按钮，即可生成有声视频</p>
+					</div>
+				</div>
+				<div class="col-md-12 column">
+					<h2>素材准备</h2>
+					<div class="col-sm-4">
+						<h3>视频下载</h3>
+						<p>除了可以用图片合成无声视频，还可以去网上下载现成的背景视频。</p>
+						<p><a target="_blank" href="https://snapany.com/zh/bilibili">素材视频下载</a></p>
+						<p><font color=red>比如</font>：在bilibili搜索关键词，“<font color=red>素材无声音</font>”</p>
+					</div>
+					<div class="col-sm-4">
+						<h3>视频分解</h3>
+						<p>下载的视频可能有背景音乐，</p>
+						<p>把视频改名为“有声视频”，放置到“分解”文件夹中</p>
+						<p>点击“分解视频”按钮，分解出两部分：音频.mp3、无声视频.mp4</p>
+						<p>补充：分解出来的音频.mp3，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，可更换声音</p>
+					</div>
+					<div class="col-sm-4">
+						<h3>F12抓包下载</h3>
+						<p>很多平台不支持下载，但我们可以尝试自己下载</p>
+						<p>用电脑浏览器打开某短视频网站</p>
+						<p>按一下键盘F12键，浏览器弹出一个窗口</p>
+						<p>刷新一下网页，就会抓取很多数据，至于哪个是视频文件</p>
+						<p>自己去网上查F12抓包教程</p>
+					</div>
+				</div>
 			</div>
 			<div class="jumbotron text-center">
 				<span style="color:green;">拉不拉软件</span>
