--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 						<p>除了可以用图片合成无声视频，还可以去网上下载现成的背景视频。</p>
 						<p><a target="_blank" href="https://snapany.com/zh/bilibili">素材视频下载</a></p>
 						<p><font color=red>比如</font>：在bilibili搜索关键词，“<font color=red>素材无声音</font>”</p>
+					    <p>也可以使用F12抓包，抓取某短视频平台的视频。请自行查询教程。</p>
 					</div>
 					<div class="col-sm-4">
 						<h3>视频分解</h3>
@@ -124,12 +125,10 @@
 						<p>补充：分解出来的音频.mp3，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，可更换声音</p>
 					</div>
 					<div class="col-sm-4">
-						<h3>F12抓包下载</h3>
-						<p>很多平台不支持下载，但我们可以尝试自己下载</p>
-						<p>用电脑浏览器打开某短视频网站</p>
-						<p>按一下键盘F12键，浏览器弹出一个窗口</p>
-						<p>刷新一下网页，就会抓取很多数据，至于哪个是视频文件</p>
-						<p>自己去网上查F12抓包教程</p>
+						<h3>AI工具</h3>
+						<p>文案工具：知乎平台的“知乎直答”工具，免费生成</p>
+						<p>豆包AI：<a target="_blank" href="https://www.doubao.com/chat/?ghh=1">豆包AI</a></p>
+						<p>百度AI：<a target="_blank" href="https://yiyan.baidu.com/">百度AI</a></p>
 					</div>
 				</div>
 			</div>
