--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 						<p>补充：分解出来的音频.mp3，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，可更换声音</p>
 					</div>
 					<div class="col-sm-4">
-						<h3>AI工具</h3>
-						<p>文案工具：知乎平台的“知乎直答”工具，免费生成</p>
+						<h3>免费AI工具</h3>
+						<p>知乎AI：<a target="_blank" href="https://zhida.zhihu.com/">知乎直答</a></p>
 						<p>豆包AI：<a target="_blank" href="https://www.doubao.com/chat/?ghh=1">豆包AI</a></p>
 						<p>百度AI：<a target="_blank" href="https://yiyan.baidu.com/">百度AI</a></p>
 					</div>
