--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 										href="https://tts.wangwangit.com/">文字转音频</a>
 								</li>
 								<li class="list-group-item">
+									<a target='_blank' rel='nofollow'
+										href="https://www.tugaigai.com/online_ps/">在线图片编辑</a>
+								</li>
+								<li class="list-group-item">
 									<a target='_blank' rel='nofollow' href="https://snapany.com/zh/bilibili">素材视频下载</a>
 								</li>
 							</ul>
@@ -121,8 +125,8 @@
 						<h3>视频分解</h3>
 						<p>下载的视频可能有背景音乐，</p>
 						<p>把视频改名为“有声视频”，放置到“分解”文件夹中</p>
-						<p>点击“分解视频”按钮，分解出两部分：音频.mp3、无声视频.mp4</p>
-						<p>补充：分解出来的音频.mp3，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，可更换声音</p>
+						<p>点击“分解视频”按钮，分解出两部分：音频.wav、无声视频.mp4</p>
+						<p>补充：分解出来的音频.wav，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，可更换声音</p>
 					</div>
 					<div class="col-sm-4">
 						<h3>免费AI工具</h3>
