--- a/index.html
+++ b/index.html
@@ -65,10 +65,14 @@
 								</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow'
-										href="https://www.tugaigai.com/online_ps/">在线图片编辑</a>
+										href="/ps/">在线图片编辑</a>
 								</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow' href="https://snapany.com/zh/bilibili">素材视频下载</a>
+								</li>
+								<li class="list-group-item">
+									<a target='_blank' rel='nofollow'
+										href="https://www.tugaigai.com/online_ps/">在线Photoshop</a>
 								</li>
 							</ul>
 							<ul id='pingtai' class="list-group">
