--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 					</div>
 					<div class="col-sm-4">
 						<h3>免费AI工具</h3>
+						<p>使用AI工具，可以生成高质量文案</p>
 						<p>知乎AI：<a target="_blank" href="https://zhida.zhihu.com/">知乎直答</a></p>
 						<p>豆包AI：<a target="_blank" href="https://www.doubao.com/chat/?ghh=1">豆包AI</a></p>
 						<p>百度AI：<a target="_blank" href="https://yiyan.baidu.com/">百度AI</a></p>
