--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<p>下载的视频可能有背景音乐，</p>
 						<p>把视频改名为“有声视频”，放置到“分解”文件夹中</p>
 						<p>点击“分解视频”按钮，分解出两部分：音频.wav、无声视频.mp4</p>
-						<p>补充：分解出来的音频.wav，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，可更换声音</p>
+						<p>补充：分解出来的音频.wav，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，文字可再换成其它声音</p>
 					</div>
 					<div class="col-sm-4">
 						<h3>免费AI工具</h3>
