--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow'
-										href="/ps/">在线图片编辑</a>
+										href="/ps/">图片添加文字</a>
 								</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow' href="https://snapany.com/zh/bilibili">素材视频下载</a>
