--- a/ps/index.html
+++ b/ps/index.html
@@ -36,6 +36,14 @@
 			    /* height: auto; 这样设置通常不会自动调整高度 */
 			}
 			#drag {
+			  text-shadow: 0 0 5px #FF4500, /* 第一个阴影，模仿光线 */
+			               0 0 10px #FF4500, /* 第二个阴影，增强发光效果 */
+			               0 0 15px #FF4500, /* 第三个阴影，进一步增强 */
+			               0 0 20px #FF4500, /* 第四个阴影，最外层的发光 */
+			               0 0 25px #FFffff; /* 第五个阴影，最后的增强 */
+			}
+
+			#drag {
 				min-width: 100px;
 				min-height: 100px;
 				position: absolute;
