--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 					<div class="col-sm-12" style='padding:0px;margin:0px;'>
 
 						<div class="col-sm-8" style="margin:0px;padding:3px;">
-							<img class="img-fluid" src="1.PNG" />
+							<div style="margin-top:50px;">
+								<img class="img-fluid" src="1.PNG" />
+							</div>
 						</div>
 						<div class="col-sm-4" style="margin:0px;padding:3px;">
 							<ul id='pingtai' class="list-group">
@@ -68,11 +70,23 @@
 										href="/ps/">图片添加文字</a>
 								</li>
 								<li class="list-group-item">
+									<a target='_blank' rel='nofollow'
+										href="https://www.toolapi.cc/ocr/">图片文字识别</a>
+								</li>
+								<li class="list-group-item">
 									<a target='_blank' rel='nofollow' href="https://snapany.com/zh/bilibili">素材视频下载</a>
 								</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow'
 										href="https://www.tugaigai.com/online_ps/">在线Photoshop</a>
+								</li>
+								<li class="list-group-item">
+									<a target='_blank' rel='nofollow'
+										href="https://www.doubao.com/chat/?ghh=1">豆包AI</a>&nbsp;&nbsp;|&nbsp;
+									<a target='_blank' rel='nofollow'
+										href="https://zhida.zhihu.com/">知乎直答</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+									<a target='_blank' rel='nofollow'
+										href="https://yiyan.baidu.com/">百度AI</a>
 								</li>
 							</ul>
 							<ul id='pingtai' class="list-group">
@@ -80,10 +94,7 @@
 									style="text-align: center;font-size: 20px;color: green;background-color: #F5F5F5;">
 									购买软件</li>
 								<li class="list-group-item">
-									<font color=red>一次付费，终身使用</font>
-								</li>
-								<li class="list-group-item">
-									只需<font color=red>28元</font>
+									一次付费，终身使用。只需<font color=red style='font-size:24px;'>28</font>元
 								</li>
 								<li class="list-group-item">
 									QQ号：<font color=red>2207537958</font>
