--- a/ps/index.html
+++ b/ps/index.html
@@ -36,20 +36,27 @@
 			    /* height: auto; 这样设置通常不会自动调整高度 */
 			}
 			#drag {
-			  text-shadow: 0 0 5px #FF4500, /* 第一个阴影，模仿光线 */
-			               0 0 10px #FF4500, /* 第二个阴影，增强发光效果 */
-			               0 0 15px #FF4500, /* 第三个阴影，进一步增强 */
-			               0 0 20px #FF4500, /* 第四个阴影，最外层的发光 */
-			               0 0 25px #FFffff; /* 第五个阴影，最后的增强 */
-			}
-
-			#drag {
 				min-width: 100px;
 				min-height: 100px;
 				position: absolute;
 				cursor: move;
 				font-size:32px;
-				color:red;
+				font-weight: 900;
+				color:#FFFF00;
+			}
+			/* 字体描边 */
+			#drag2 {
+				min-width: 100px;
+				min-height: 100px;
+				position: absolute;
+				cursor: move;
+				font-size:32px;
+				font-weight: 900;
+				color:#fff;
+				/* 设置描边宽度及颜色 默认为字体内外描边 */
+				text-stroke: 2px #0000FF;
+				/* 兼容Webkit(Chrome/Safari)内核浏览器的写法 */
+				-webkit-text-stroke: 2px #0000FF;
 			}
 		</style>
 	</head>
@@ -77,7 +84,6 @@
 				</nav>
 
 				<div class="col-md-12 column">
-					
 					<div class="col-md-8 column image-container">
 						<h2>打开图片</h2>
 						<input type="file" id="imageInput" accept="image/*">
