--- a/ps/index.html
+++ b/ps/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>拉不拉软件</title>
-		<meta name="description" content="本网站分享免费工具网站或者免费软件" />
+		<title>图片添加文字-拉不拉软件</title>
+		<meta name="description" content="在线图片加文字" />
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<style>
 			img {
@@ -192,5 +192,6 @@
 	    document.onmousemove = null;
 	}
 	</script>
+
 
 </html>
