--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 					<div class="col-sm-12" style='padding:0px;margin:0px;'>
 
 						<div class="col-sm-8" style="margin:0px;padding:3px;">
-							<div style="margin-top:50px;">
-								<img class="img-fluid" src="1.PNG" />
+							<div style="margin-top:50px;margin:0 auto;text-align: center;">
+								<img class="img-fluid" src="1.jpg" />
 							</div>
 						</div>
 						<div class="col-sm-4" style="margin:0px;padding:3px;">
@@ -63,11 +63,11 @@
 									辅助工具</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow'
-										href="https://tts.wangwangit.com/">文字转音频</a>
+										href="https://www.doubao.com/chat/?ghh=1">豆包AI（生成：文案、图片）</a>
 								</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow'
-										href="/ps/">图片添加文字</a>
+										href="https://tts.wangwangit.com/">文字转音频</a>
 								</li>
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow'
@@ -76,18 +76,7 @@
 								<li class="list-group-item">
 									<a target='_blank' rel='nofollow' href="https://snapany.com/zh/bilibili">素材视频下载</a>
 								</li>
-								<li class="list-group-item">
-									<a target='_blank' rel='nofollow'
-										href="https://www.tugaigai.com/online_ps/">在线Photoshop</a>
-								</li>
-								<li class="list-group-item">
-									<a target='_blank' rel='nofollow'
-										href="https://www.doubao.com/chat/?ghh=1">豆包AI</a>&nbsp;&nbsp;|&nbsp;
-									<a target='_blank' rel='nofollow'
-										href="https://zhida.zhihu.com/">知乎直答</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-									<a target='_blank' rel='nofollow'
-										href="https://yiyan.baidu.com/">百度AI</a>
-								</li>
+								
 							</ul>
 							<ul id='pingtai' class="list-group">
 								<li class="list-group-item"
@@ -113,25 +102,33 @@
 					<h2>视频合成</h2>
 					<div class="col-sm-4">
 						<h3>文字转音频</h3>
-						<p><font color=red>方法1：</font>将文本复制到“合成”文件夹中的“文本.txt”中，点击软件的绿色按钮，自动生成音频文件</p>
-						<p><font color=red>方法2：</font>使用<a target="_blank" href="https://tts.wangwangit.com/">文字转音频</a>工具，在线生成音频文件，下载后，改名为“音频.mp3”,复制到软件目录的“合成”文件夹中。</p>
+						<p><font color=red>
+						</font>使用<a target="_blank" href="https://tts.wangwangit.com/">文字转音频</a>工具，文字转语音。
+						<br><br>点击下载，文件名为：speech.mp3</p>
 					</div>
 					<div class="col-sm-4">
 						<h3>图片转视频</h3>
-						<p>将自己准备的图片，放到“合成”文件夹里的“图片”文件夹中，点击软件界面的相应按钮，自动生成无声视频。</p>
-					    <p>每张图片默认播放5秒，可以自己修改</p>
+						<p>将图片放到“合成/图片”文件夹中
+						<br><br>点击"图片转视频"，生成无声视频。
+					    <br><br>每张图片默认播放5秒，可以自己修改</p>
 					</div>
 					<div class="col-sm-4">
 						<h3>视频合成</h3>
-						<p>前面两个步骤，分别生成了"音频.mp3"和"无声视频.mp4"</p>
-						<p>直接点击“视频合成”按钮，即可生成有声视频</p>
+						<p>把speech.mp3放到“合成”文件夹中。
+						<br><br>直接点击“视频合成”按钮，即可生成有声视频</p>
 					</div>
 				</div>
 				<div class="col-md-12 column">
 					<h2>素材准备</h2>
 					<div class="col-sm-4">
+						<h3>文案、图片</h3>
+						<p>方案1：<a target="_blank" rel='nofollow' href="https://www.doubao.com/chat/?ghh=1">豆包AI</a>，AI生成文案、图片。</p>
+						<p>方案2：<a target='_blank' rel='nofollow' href="https://www.toolapi.cc/ocr/">图片文字识别</a>，将图片上的文字采集下来。</p>
+					</div>
+					<div class="col-sm-4">
 						<h3>视频下载</h3>
-						<p>除了可以用图片合成无声视频，还可以去网上下载现成的背景视频。</p>
+						<p>除了用图片制作视频，</p>
+						<p>还可以去网上下载背景视频。</p>
 						<p><a target="_blank" href="https://snapany.com/zh/bilibili">素材视频下载</a></p>
 						<p><font color=red>比如</font>：在bilibili搜索关键词，“<font color=red>素材无声音</font>”</p>
 					    <p>也可以使用F12抓包，抓取某短视频平台的视频。请自行查询教程。</p>
@@ -139,16 +136,9 @@
 					<div class="col-sm-4">
 						<h3>视频分解</h3>
 						<p>下载的视频可能有背景音乐，</p>
-						<p>把视频改名为“有声视频”，放置到“分解”文件夹中</p>
-						<p>点击“分解视频”按钮，分解出两部分：音频.wav、无声视频.mp4</p>
-						<p>补充：分解出来的音频.wav，可以使用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，文字可再换成其它声音</p>
-					</div>
-					<div class="col-sm-4">
-						<h3>免费AI工具</h3>
-						<p>使用AI工具，可以生成高质量文案</p>
-						<p>知乎AI：<a target="_blank" href="https://zhida.zhihu.com/">知乎直答</a></p>
-						<p>豆包AI：<a target="_blank" href="https://www.doubao.com/chat/?ghh=1">豆包AI</a></p>
-						<p>百度AI：<a target="_blank" href="https://yiyan.baidu.com/">百度AI</a></p>
+						<p>把视频文件名改为“有声视频”，放置到“分解”文件夹中</p>
+						<p>点击“分解视频”按钮，分解出两部分：speech.mp3、无声视频.mp4</p>
+						<p>还可以用<a href="https://tts.wangwangit.com/">语音文字互转</a>工具转为文字，重新配音</p>
 					</div>
 				</div>
 			</div>
