--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 						<div class="col-sm-8" style="margin:0px;padding:3px;">
 							<div style="margin-top:50px;margin:0 auto;text-align: center;">
-								<img class="img-fluid" src="1.jpg" />
+								<img class="img-fluid" src="1.JPG" />
 							</div>
 						</div>
 						<div class="col-sm-4" style="margin:0px;padding:3px;">
@@ -147,5 +147,6 @@
 			</div>
 		</div>
 	</body>
+
 
 </html>
