--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico">
 		<title>拉不拉软件</title>
-		<meta name="description" content="本网站分享免费工具网站或者免费软件" />
+		<meta name="description" content="图片文字合成视频，图文生成视频，图片和音频合成视频，视频分解" />
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<style>
 			img {
@@ -150,3 +150,4 @@
 
 
 </html>
+
