--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico">
-		<title>拉不拉软件</title>
+		<title>图文视频工具-拉不拉软件</title>
 		<meta name="description" content="图片文字合成视频，图文生成视频，图片和音频合成视频，视频分解" />
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<style>
@@ -150,4 +150,5 @@
 
 
 </html>
+
 
