--- a/biaoqing/index.html
+++ b/biaoqing/index.html
@@ -340,22 +340,22 @@
                 <div class="material-list" id="bgMaterialList">
                     <!-- 背景素材（可自行扩展） -->
                     <div class="material-item active" data-src="/body/a1.png">
-                        <img src="/body/a1.png" alt="表情1">
+                        <img src="body/a1.png" alt="表情1">
                     </div>
                     <div class="material-item" data-src="/body/a2.png">
-                        <img src="/body/a2.png" alt="表情2">
+                        <img src="body/a2.png" alt="表情2">
                     </div>
                     <div class="material-item" data-src="/body/a3.png">
-                        <img src="/body/a3.png" alt="表情3">
+                        <img src="body/a3.png" alt="表情3">
                     </div>
                     <div class="material-item" data-src="/body/a4.png">
-                        <img src="/body/a4.png" alt="表情4">
+                        <img src="body/a4.png" alt="表情4">
                     </div>
                     <div class="material-item" data-src="/body/a5.png">
-                        <img src="/body/a5.png" alt="表情5">
+                        <img src="body/a5.png" alt="表情5">
                     </div>
 					<div class="material-item" data-src="/body/a.png">
-					    <img src="/body/a.png" alt="表情">
+					    <img src="body/a.png" alt="表情">
 					</div>
                 </div>
             </div>
@@ -366,19 +366,19 @@
                 <div class="material-list" id="emojiMaterialList">
                     <!-- 表情素材（可自行扩展） -->
                     <div class="material-item active" data-src="/face/a1.png">
-                        <img src="/face/a1.png" alt="表情1">
+                        <img src="face/a1.png" alt="表情1">
                     </div>
                     <div class="material-item" data-src="/face/a2.png">
-                        <img src="/face/a2.png" alt="表情2">
+                        <img src="face/a2.png" alt="表情2">
                     </div>
                     <div class="material-item" data-src="/face/a3.png">
-                        <img src="/face/a3.png" alt="表情3">
+                        <img src="face/a3.png" alt="表情3">
                     </div>
                     <div class="material-item" data-src="/face/a4.png">
-                        <img src="/body/a4.png" alt="表情4">
+                        <img src="face/a4.png" alt="表情4">
                     </div>
                     <div class="material-item" data-src="/face/a5.png">
-                        <img src="/face/a5.png" alt="表情5">
+                        <img src="face/a5.png" alt="表情5">
                     </div>
                 </div>
             </div>
